--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/cli-platform-android": "^4.13.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^5.0.11",
     "native-base": "^2.15.2",
-    "radio-buttons-react-native": "^1.0.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-best-viewpager": "^1.0.4",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
@@ -24,6 +26,7 @@
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-navigation": "^4.4.2",
     "react-navigation-drawer": "^2.5.2",
     "react-navigation-stack": "^2.8.4"
