--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "native-base": "^2.15.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-best-viewpager": "^1.0.4",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-dropdown": "^1.0.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.2.0",
